# DAGT

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/interface/: app.rs  draw.rs  event.rs  widget.rs  window.rs
dagt/: Cargo.toml
dagt/examples/: counter.rs  text.rs
dagt/src/: lib.rs
fonts/: Cargo.toml
fonts/src/: lib.rs  reader.rs
gl/: Cargo.toml
gl/src/: error.rs  lib.rs  macros.rs
gl/src/egl/: binds.rs  config.rs  context.rs  display.rs  error.rs  surface.rs  types.rs
gl/src/egl/config/: attrs.rs
gl/src/egl/context/: attrs.rs
gl/src/gles/: binds.rs  error.rs  func.rs  program.rs  shader.rs  types.rs  vertex.rs
platform/: Cargo.toml
platform/src/: lib.rs
platform/src/desktop/: app.rs  event.rs  window.rs
platform/src/desktop/wayland/: app.rs  window.rs
platform/src/desktop/wayland/app/: globals.rs
platform/src/desktop/wayland/app/globals/: seat.rs
platform/src/desktop/wayland/app/globals/seat/: keyboard.rs  pointer.rs
primitives/: Cargo.toml
primitives/shaders/: f.glsl  f_circle.glsl  f_rect.glsl  v.glsl
primitives/src/: circle.rs  color.rs  glyph.rs  lib.rs  path.rs  rect.rs  vertex.rs
widgets/: Cargo.toml
widgets/src/: lib.rs  text.rs
widgets/src/buttons/: button.rs
widgets/src/layouts/: center.rs  row.rs
